fixed config file

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
-host = mysli.oamk.fi
-database = opisk_n1tuno00
-user = n1tuno00
-password = 7E4bhHGq73644YCd
+host = localhost
+database = verkkokauppa
+user = root
+password = 
